// Copyright 2019 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.
syntax = "proto3";

package recipe_modules.recipe_engine.buildbucket;

import "go.chromium.org/luci/buildbucket/proto/build.proto";

message InputProperties {
  .buildbucket.v2.Build build = 1;
}

message LegacyInputProperties {
  // === Legacy =================================================================
  string mastername = 101;
  string buildername = 102;
  int64 buildnumber = 103;

  // sources for buildbucket.build.input.gitiles_commit.
  string revision = 104;
  string parent_got_revision = 105;
  string branch = 106;

  // sources for buildbucket.build.input.gerrit_changes.
  string patch_storage = 111;
  string patch_gerrit_url = 112;
  string patch_project = 113;
  int64 patch_issue = 114;
  int64 patch_set = 115; // this also covers `patchset`.
  int64 issue = 116;
}
